Bug 120907 - Arrow keys don't work in color picker if palette dropdown list is displayed
Summary: Arrow keys don't work in color picker if palette dropdown list is displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-25 12:37 UTC by Xisco Faulí
Modified: 2018-10-25 22:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-10-25 12:37:44 UTC
Steps to reproduce:
1. Open writer
2. Click on any color picker
3. Click on the palette dropdown list
4. Move up or down using the arrow keys

-> Focus is on the document

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: cd6dd8c6f3562cbccbc971b916c6a8933840ffeb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-10-25 12:40:51 UTC
it seems it has never worked in GTK3.
In GTK or GEN , it worked until

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e867b197540cfc8b75bb1108c8bcd7a0ff65d347

author	Maxim Monastirsky <momonasmon@gmail.com>	2017-09-17 23:35:55 +0300
committer	Maxim Monastirsky <momonasmon@gmail.com>	2017-09-24 15:37:28 +0300
commit e867b197540cfc8b75bb1108c8bcd7a0ff65d347 (patch)
tree 8dbcdc2d2db4b9f3fb0e302b5d8031386a75c346
parent 8bd418a6b8253a9d725981743a0375e2c8bb911e (diff)
tdf#106762 Base SvxColorToolBoxControl on svt::PopupWindowController

@Maxim, @Caolán, I'm not sure whether it's a regression or even a bug but I thought I should report it as it worked in the past. What do you think ?
Comment 2 Maxim Monastirsky 2018-10-25 13:36:18 UTC
Don't have enough time right now, but maybe something like this will help:

https://gerrit.libreoffice.org/62361/
Comment 3 Vera Blagoveschenskaya 2018-10-25 13:52:49 UTC
I can't reproduce this behavior, could you please attach a screen or video?
Comment 4 Commit Notification 2018-10-25 22:31:58 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96cf06c947838120e37f3fbb4d0543dd882cb20c

tdf#120907 Arrow keys don't work in palette list

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Maxim Monastirsky 2018-10-25 22:33:58 UTC
This works for me anyway.