tdf#120907 Arrow keys don't work in palette list

For a docking window which reparented to a floating window
via DockingManager, Window::GetParent() won't find the
floating window, because WindowImpl::mpRealParent points
to the previous parent (e.g. the toolbar). What we need is
to check WindowImpl::mpParent instead.

Change-Id: Ibdc5e29b7b8db37f9cbea65b3d7fbe39de334319
Reviewed-on: https://gerrit.libreoffice.org/62361
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>